--- a/mpbMassAttacksData.html
+++ b/mpbMassAttacksData.html
@@ -498,6 +498,7 @@ mySimOut &lt;- spades(mySim)</code></pre>
 <h1>Links to other modules</h1>
 <p>Mountain Pine Beetle Red Top Growth Model: Short-run Potential for Establishment, Eruption, and Spread.</p>
 <ul>
+<li><code>mpbClimateData</code></li>
 <li><code>mpbPine</code></li>
 <li><code>mpbRedTopSpread</code></li>
 </ul>
